test/tests/errors/error-valof-return-no-valof.sm
// true
// false
// false
/**/
/**/

program {
    return x;
}